# gridfinity_build123d

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  dingetje.stl  mypy.ini  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: linting.yml  pre-commit.yml  sphinx_doctest.yml  test.yml
docs/: requirements.txt
docs/assets/: image_gen.py
docs/source/: conf.py  features.rst  gridfinity_build123d.rst  index.rst  objects.rst  reference.rst
examples/: custom_bin.py  normal_bin.py  simple_bin.py
src/gridfinity_build123d/: __init__.py  base.py  baseplate.py  bin.py  common.py  compartments.py  connectors.py  constants.py  feature_locations.py  features.py  utils.py
tests/: context.py  mocks.py  test_base.py  test_bin.py  test_int_base.py  test_int_baseplate.py  test_int_bin.py  test_int_refined.py  test_unit_base.py  test_unit_base_plate.py  test_unit_bin.py  test_unit_common.py  test_unit_compartments.py  test_unit_connectors.py  test_unit_feature_locations.py  test_unit_features.py  test_unit_testutils.py  test_unit_utils.py  testutils.py
tools/: dev_check.sh
