[project]
name = "gridfinity_build123d"
version = "0.1.0"
description = "something"
dependencies = [
    "build123d @ git+https://github.com/gumyr/build123d.git@b19bb81"
    ]

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.coverage.run]
branch = true
omit = ["test_*"]

[tool.pylint.MASTER]
load-plugins=["pylint_per_file_ignores"]

[tool.pylint.'MESSAGES CONTROL']
disable = "too-many-arguments,too-many-locals"
ignore-patterns = "test_.*"

[tool.pylint-per-file-ignores]
"/tests/"="missing-function-docstring,missing-module-docstring,missing-class-docstring"