[project]
name = "gridfinity_build123d"
version = "0.1.0"
description = "Build123d library for gridfinity objects"
dependencies = [
    "build123d==0.6.0",
    "bd_warehouse@git+https://github.com/gumyr/bd_warehouse@7e68dfecc03c7ab64cc9c41d8b1313f060137bb8",
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.coverage.run]
branch = true
omit = ["test_*"]

[too.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN101", "PLR0913", "ANN204", "S603"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "D100",
    "D101",
    "D102",
    "D107",
    "N802",
    "INP001",
    "PT009",
    "PT027",
]
"**/docs/*" = ["D100", "D101", "D102", "INP001"]

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-decorators = ['inherit_docstring']

[tool.ruff.lint.pycodestyle]
max-line-length = 101
